2002-05-21  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/configure: Regen.
	* unix/configure.in: Invoke SC_ENABLE_SHARED before
	calling SC_CONFIG_CFLAGS so that the SHARED_BUILD
	variable can be checked inside SC_CONFIG_CFLAGS.
	* unix/tcl.m4 (SC_CONFIG_CFLAGS): Pass -non_shared
	instead of -shared to ld when configured with
	--disable-shared under OSF. [Tcl bug 540390]

2002-05-20  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclInt.h: added prototype for TclpFilesystemPathType().
	* mac/tclMacChan.c: use MSL provided creator type if available
	instead of the default 'MPW '.

2002-05-16  Joe English  <jenglish@users.sf.net>

	* doc/CrtObjCmd.3: 
	Added Tcl_GetCommandFromObj, Tcl_GetCommandFullName
	(Tcl Bug #547987, #414921)

2002-05-14  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* unix/tclUnixChan.c (TtyOutputProc): #if/#endif-ed this function
	out to stop compiler warnings.  Also much general tidying of
	comments in this file and removal of whitespace from blank lines.

2002-05-13  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* unix/tclUnixChan.c (SETBREAK): Solaris thinks ioctl() takes a
	signed second argument, and Linux thinks ioctl() takes an unsigned
	second argument.  So need a longer definition of this macro to get
	neither to spew warnings...

2002-05-13  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclEvent.c: 
	* generic/tclIOUtil.c:
	* generic/tclInt.h: clean up all memory allocated by the
	filesystem, via introduction of 'TclFinalizeFilesystem'.
	Move TclFinalizeLoad into TclFinalizeFilesystem so we can
	be sure it is called at just the right time.
	Fix bad comment also.  [Fixes 555078 and 'fs' part of 543549]
	* win/tclWinChan.c: fix comment referring to wrong function.
	
2002-05-10  Don Porter  <dgp@users.sourceforge.net>

	* tests/load.test:
	* tests/safe.test:
	* tests/tcltest.test: Corrected some list-quoting issues and
	other matters that cause tests to fail when the patch includes